# Mem0-Powered-AI-Conversational-Assistant

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
src/main_logic/: core.py  workflow.py
src/utils/: memory_logger.py  memory_manager.py  memory_manager_inmemory.py  vector_setup.py
